<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popup_alarmaTit"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/popup_alarmaBody"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="15dp"/>

    <!-- SEPARADOR -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popuo_alarmaAvisoAuto"
        android:textColor="#000000"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popuo_alarmaAvisoAuto2"
        android:textColor="#000000"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popup_alarmaAviso"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="10dp"/>

</LinearLayout>