<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarma_diaTitulo"
                    android:id="@+id/lbDiaTitulo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="DIA_ACTUAL"
                    android:id="@+id/lbDiaActual"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/alarma_tituloHora"
                        android:id="@+id/lbHoraSeteada"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/alarma_horaDefecto"
                        android:id="@+id/lbHoraTarget"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=":"
                        android:id="@+id/lbHoraSeparador"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/alarma_minDefecto"
                        android:id="@+id/lbMinTarget"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/alarma_titHoras"
                        android:id="@+id/lbTitHoras"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnActualizarHora"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:text="@string/alarma_botonActualizar"
                    android:drawableLeft="@drawable/ic_action_autorenew"
                    />

            </FrameLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:id="@+id/radioGroupJornada"
                android:nestedScrollingEnabled="false">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_jornada9"
                    android:id="@+id/raJornada9"
                    android:tag="raJornada9"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_jornada8"
                    android:id="@+id/raJornada8"
                    android:tag="raJornada8"
                    android:checked="false"/>
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarma_salidaEstimada"
                    android:id="@+id/lbSalidaEstimada"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarma_horaDefecto"
                    android:id="@+id/lbTargetHoraSalida"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=":"
                    android:id="@+id/txtSeparadorSalida"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarma_minDefecto"
                    android:id="@+id/lbTargetMinutoSalida"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/alarma_titHoras"
                    android:id="@+id/lbLabelSalida"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alarma_avisarSalir"
                android:id="@+id/lbAvisarSalir"
                android:layout_marginTop="15dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupAntesMin"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_radio5"
                    android:id="@+id/ra5min"
                    android:elegantTextHeight="false"
                    android:tag="ra5"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_radio10"
                    android:id="@+id/ra10min"
                    android:tag="ra10"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_radio30"
                    android:id="@+id/ra30min"
                    android:tag="ra30"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarma_radioHora"
                    android:id="@+id/raUnaHora"
                    android:tag="raUnaHora"
                    android:checked="false"/>

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarma_botonSetAlarma"
                android:id="@+id/btnSetAlarma"
                android:drawableLeft="@drawable/ic_action_alarm_manual"
                android:background="@drawable/boton_custom"
                android:layout_weight="5"
                android:layout_marginRight="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarma_botonResetearAlarma"
                android:id="@+id/btnCancelAlarma"
                android:drawableRight="@drawable/ic_navigation_cancel_manual"
                android:background="@drawable/boton_custom"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>