<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popup_titulo_inicial"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/popup_mensaje"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="8"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:digits="0123456789">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tabReloj_avisoRut"
        android:id="@+id/lbAvisoRut"
        android:textColor="@color/accent_material_light"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:textSize="17dp"/>

</LinearLayout>