<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:weightSum="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/muestraReloj_nombreP"
            android:id="@+id/lbNombre"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/muestraReloj_fechaTitulo"
            android:id="@+id/lbFechaTitulo"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/muestraReloj_titFecha"
                android:id="@+id/lbFecha"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/muestraReloj_titHora"
                android:id="@+id/lbHora"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/muestraReloj_titMarcacion"
                android:id="@+id/lbMarcacion"
                android:textStyle="bold"
                android:layout_gravity="right"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <GridView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridMarcacion"
            android:layout_gravity="center_horizontal"
            android:numColumns="3"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muestraReloj_botonV"
            android:id="@+id/btnVolver"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableRight="@drawable/ic_back"
            android:background="@drawable/boton_custom"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
</LinearLayout>