<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/config_tituCambiarRut"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/config_cambiarRut"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/txtRutInConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="8"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:digits="0123456789">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tabReloj_avisoRut"
        android:id="@+id/lbAvisoRut"
        android:textColor="@color/accent_material_light"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_gravity="right"/>

</LinearLayout>